data/forge_javadoc/1.12.2/processed/net_minecraft_item_ItemArmor.ArmorMaterial.md
# ItemArmor.ArmorMaterial

**Inheritance:** java.lang.Object → java.lang.Enum<ItemArmor.ArmorMaterial> → net.minecraft.item.ItemArmor.ArmorMaterial

## Class signature

```java
public static enum ItemArmor.ArmorMaterial extends java.lang.Enum<ItemArmor.ArmorMaterial>
```

## Methods

- `int getDamageReductionAmount(EntityEquipmentSlot armorType)`
- `int getDurability(EntityEquipmentSlot armorType)`
- `int getEnchantability()`
- `java.lang.String getName()`
- `@Deprecated Item getRepairItem()`
- `ItemStack getRepairItemStack()`
- `SoundEvent getSoundEvent()`
- `float getToughness()`
- `ItemArmor.ArmorMaterial setRepairItem(ItemStack stack)`
- `static ItemArmor.ArmorMaterial valueOf(java.lang.String name)` — Returns the enum constant of this type with the specified name.
- `static ItemArmor.ArmorMaterial [] values()` — Returns an array containing the constants of this enum type, in the order they are declared.

## Fields

- `ItemStack repairMaterial`